--- a/SmartLife/Views/SmartLifeClasses/Delete.cshtml
+++ b/SmartLife/Views/SmartLifeClasses/Delete.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Occupation)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Money)
+            @Html.DisplayNameFor(model => model.Monthly_salary)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Money)
+            @Html.DisplayFor(model => model.Monthly_salary)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Mood)
