--- a/SmartLife/Views/SmartLifeClasses/Edit.cshtml
+++ b/SmartLife/Views/SmartLifeClasses/Edit.cshtml
@@ -29,9 +29,9 @@
                 <span asp-validation-for="Occupation" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Money" class="control-label"></label>
-                <input asp-for="Money" class="form-control" />
-                <span asp-validation-for="Money" class="text-danger"></span>
+                <label asp-for="Monthly_salary" class="control-label"></label>
+                <input asp-for="Monthly_salary" class="form-control" />
+                <span asp-validation-for="Monthly_salary" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Mood" class="control-label"></label>
