--- a/SmartLife/Views/SmartLifeClasses/Index.cshtml
+++ b/SmartLife/Views/SmartLifeClasses/Index.cshtml
@@ -15,6 +15,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th>Score</th>
             <th>
                 @Html.DisplayNameFor(model => model.Age)
             </th>
@@ -22,7 +23,7 @@
                 @Html.DisplayNameFor(model => model.Occupation)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Money)
+                @Html.DisplayNameFor(model => model.Monthly_salary)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Mood)
@@ -40,32 +41,41 @@
         </tr>
     </thead>
     <tbody>
+
 @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
+                <th>@item.CalculateScore()</th>
             <td>
                 @Html.DisplayFor(modelItem => item.Age)
             </td>
+                <th>@item.CalculateScore()</th>
             <td>
                 @Html.DisplayFor(modelItem => item.Occupation)
             </td>
+                <th>@item.CalculateScore()</th>
             <td>
-                @Html.DisplayFor(modelItem => item.Money)
+                    @Html.DisplayFor(modelItem => item.Monthly_salary)
             </td>
+                <th>@item.CalculateScore()</th>
             <td>
                 @Html.DisplayFor(modelItem => item.Mood)
             </td>
+                <th>@item.CalculateScore()</th>
             <td>
                 @Html.DisplayFor(modelItem => item.Personality)
             </td>
+                <th>@item.CalculateScore()</th>
             <td>
                 @Html.DisplayFor(modelItem => item.Familybond)
             </td>
+                <th>@item.CalculateScore()</th>
             <td>
                 @Html.DisplayFor(modelItem => item.LastUpdated)
             </td>
+                <th>@item.CalculateScore()</th>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
