--- a/SmartLife/Views/SmartLifeClasses/Create.cshtml
+++ b/SmartLife/Views/SmartLifeClasses/Create.cshtml
@@ -34,12 +34,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Mood" class="control-label"></label>
-                <input asp-for="Mood" class="form-control" />
+                <select asp-for="Mood" class="form-control" asp-items="Html.GetEnumSelectList<MoodType>()"></select>
                 <span asp-validation-for="Mood" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Personality" class="control-label"></label>
-                <input asp-for="Personality" class="form-control" />
+                <select asp-for="Personality" class="form-control" asp-items="Html.GetEnumSelectList<PersonalityType>()"></select>
                 <span asp-validation-for="Personality" class="text-danger"></span>
             </div>
             <div class="form-group">
